# src/app.module.ts
@@ -1,4 +1,4 @@
-import { MiddlewareConsumer, Module, NestModule } from '@nestjs/common';
+import { MiddlewareConsumer, Module, NestModule, RequestMethod } from '@nestjs/common';
 import { APP_FILTER } from '@nestjs/core';
 import { ConfigModule, ConfigService } from '@nestjs/config';
 import * as OpenApiValidator from 'express-openapi-validator';
@@ -37,6 +37,7 @@ export class AppModule implements NestModule {
           validateResponses: true,
         }),
       )
+      .exclude({ path: 'orders/:id/events', method: RequestMethod.GET })
       .forRoutes('*');
   }
 }
